# qualsynth

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/datasets/: breast_cancer.yaml  german_credit.yaml  haberman.yaml  htru2.yaml  pima_diabetes.yaml  thyroid.yaml  wine_quality.yaml  yeast.yaml
configs/methods/: ctgan.yaml  qualsynth.yaml  smote.yaml  tabfairgdt.yaml
configs/ollama/: gemma3-m4-faster.Modelfile
data/splits/breast_cancer/: split_seed123.pkl  split_seed1234.pkl  split_seed2024.pkl  split_seed3141.pkl  split_seed42.pkl  split_seed4242.pkl  split_seed456.pkl  split_seed5555.pkl  split_seed6789.pkl  split_seed789.pkl
data/splits/german_credit/: split_seed123.pkl  split_seed1234.pkl  split_seed2024.pkl  split_seed3141.pkl  split_seed42.pkl  split_seed4242.pkl  split_seed456.pkl  split_seed5555.pkl  split_seed6789.pkl  split_seed789.pkl
data/splits/haberman/: split_seed123.pkl  split_seed1234.pkl  split_seed2024.pkl  split_seed3141.pkl  split_seed42.pkl  split_seed4242.pkl  split_seed456.pkl  split_seed5555.pkl  split_seed6789.pkl  split_seed789.pkl
data/splits/htru2/: split_seed123.pkl  split_seed1234.pkl  split_seed2024.pkl  (+7 more)
replication/: README.md  replication.py  requirements.txt  setup_ubuntu.sh
replication/baselines/: __init__.py  ctgan_baseline.py  tabfairgdt.py
replication/qualsyn-1.0.0/: LICENSE  README.md  pyproject.toml
replication/qualsyn-1.0.0/qualsyn/: __init__.py  generator.py
replication/qualsyn-1.0.0/qualsyn/core/: iterative_workflow.py
replication/qualsyn-1.0.0/qualsyn/data/: eda.py  preprocessing.py  splitting.py
replication/qualsyn-1.0.0/qualsyn/generators/: counterfactual_generator.py
replication/qualsyn-1.0.0/qualsyn/modules/: schema_profiler.py
replication/qualsyn-1.0.0/qualsyn/utils/: adaptive_iteration_predictor.py  diversity_maximizer.py  sota_duplicate_prevention.py
replication/qualsyn-1.0.0/qualsyn/validation/: adaptive_validator.py  universal_validator.py
replication/tables/: all_results.csv  breast_cancer_ctgan_results.csv  breast_cancer_qualsynth_results.csv  breast_cancer_smote_results.csv  breast_cancer_tabfairgdt_results.csv  german_credit_ctgan_results.csv  german_credit_qualsynth_results.csv  german_credit_smote_results.csv  german_credit_tabfairgdt_results.csv  haberman_ctgan_results.csv  haberman_qualsynth_results.csv  haberman_smote_results.csv  haberman_tabfairgdt_results.csv  htru2_ctgan_results.csv  htru2_qualsynth_results.csv  htru2_smote_results.csv  htru2_tabfairgdt_results.csv  pima_diabetes_ctgan_results.csv  pima_diabetes_qualsynth_results.csv  pima_diabetes_smote_results.csv  pima_diabetes_tabfairgdt_results.csv  summary_f1_scores.csv  summary_fairness.csv  summary_gmean.csv  summary_validation_rates.csv  thyroid_ctgan_results.csv  thyroid_qualsynth_results.csv  thyroid_smote_results.csv  thyroid_tabfairgdt_results.csv  wine_quality_ctgan_results.csv  wine_quality_qualsynth_results.csv  wine_quality_smote_results.csv  wine_quality_tabfairgdt_results.csv  yeast_ctgan_results.csv  yeast_qualsynth_results.csv  yeast_smote_results.csv  yeast_tabfairgdt_results.csv
scripts/: analyze_results.py  analyze_results_extended.py  generate_cd_diagrams.py  generate_replication_tables.py  run_experiments.py  run_openrouter_experiments.py  run_with_ollama_m4.sh  setup_ubuntu.sh
(+43 files in other folders)
